Fixes launch screen alignment

--- a/lp-counter/Launch Screen.storyboard
+++ b/lp-counter/Launch Screen.storyboard
@@ -22,8 +22,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lp-counter-icon-elements" translatesAutoresizingMaskIntoConstraints="NO" id="zVG-zN-k9A">
-                                <rect key="frame" x="158" y="408" width="77" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <rect key="frame" x="158" y="409" width="77" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
